--- a/nin.html
+++ b/nin.html
@@ -20,7 +20,6 @@
 <br><br>
 
 		<div class="container">
-		<body background="https://sites.google.com/site/pansahomklin/_/rsrc/1424142335610/faem-sasm-phl-ngan/ph/%E0%B8%9E%E0%B8%B7%E0%B9%89%E0%B8%99%E0%B8%AB%E0%B8%A5%E0%B8%B1%E0%B8%87%20copy.jpg">
 			
             <ul class="gridder">
                 <li class="gridder-list" data-griddercontent="#gridder-content-1">
@@ -127,10 +126,8 @@
                         <h2>New York 1st Time</h2>
                         <p><li><b>ผู้เขียน : ธนชาติ ศิริภัทราชัย</b></p>
 						<p><li> เนื้อหาโดยสังเขป : หนังสือเล่มแรกที่บอกเล่าทุกเรื่องราวครั้งแรกในนิวยอร์ก ของ “เบ๊น-ธนชาติ ศิริภัทราชัย” ผู้ช่วยผู้กำกับภาพยนตร์เรื่อง ลุงบุญมีระลึกชาติ ที่บินไปเรียน
-						ถ่ายภาพถึงอาณาจักร บิ๊ก แอ๊ปเปิ้ล<
-						พร้อมแคปเจอร์ทุกเหตุการณ์ครั้งแรกมาแชร์แบบจัดเต็ม ไม่ว่าจะเป็นโดนปล้นครั้งแรก เคาท์ดาวน์ที่ไทม์สแควร์ครั้งแรก สู้กับพายุเฮอร์ริเคนครั้งแรก  เป็นลูกจ้างฝรั่งครั้งแรก
-						มีแฟนเป็นชาวต่างชาติครั้งแรก<
-						รวมถึงความอดทนแปลกๆ กับครั้งแรกที่ต้องยืนต่อแถวกว่าแปดชั่วโมง!</p></li>    
+						ถ่ายภาพถึงอาณาจักร บิ๊ก แอ๊ปเปิ้ลพร้อมแคปเจอร์ทุกเหตุการณ์ครั้งแรกมาแชร์แบบจัดเต็ม ไม่ว่าจะเป็นโดนปล้นครั้งแรก เคาท์ดาวน์ที่ไทม์สแควร์ครั้งแรก สู้กับพายุเฮอร์ริเคนครั้งแรก  
+						เป็นลูกจ้างฝรั่งครั้งแรกมีแฟนเป็นชาวต่างชาติครั้งแรกรวมถึงความอดทนแปลกๆ กับครั้งแรกที่ต้องยืนต่อแถวกว่าแปดชั่วโมง!</p></li>    
 				
 						<p><li></p>
 
